# avmon

./: AUTHORS  INSTALL  Makefile.am  NEWS  README  TODO  configure.ac
avmon/: Makefile.am  avmon.c  avmon.h  common.h  conf.c  conf.h  listener.c  listener.h  messages.c  messages.h  net.c  net.h  util.c  util.h
mini/: Makefile.am  README  mini-monitor.c  mini-query.c  quit  sample1.conf  sample2.conf  start  stop
